2021-06-15  Arcady Goldmints-Orlov  <agoldmints@igalia.com>

        [GTK] Unreviewed test gardening: add expected failure

        The fast/text/letter-spacing-produces-nan-width.html test crashes on debug.

        * platform/gtk/TestExpectations:

2021-06-15  Alan Bujtas  <zalan@apple.com>

        [LFC][TFC] Add support for preferred width computation when mixed width types are present
        https://bugs.webkit.org/show_bug.cgi?id=227010

        Reviewed by Antti Koivisto.

        * fast/layoutformattingcontext/table-space-distribution-mixed-width-type-simple-expected.html: Added.
        * fast/layoutformattingcontext/table-space-distribution-mixed-width-type-simple.html: Added.

2021-06-15  Martin Robinson  <mrobinson@igalia.com>

        [css-scroll-snap] Scroll snap offsets are interpreted as scroll positions in ScrollableArea
        https://bugs.webkit.org/show_bug.cgi?id=226572

        Reviewed by Simon Fraser.

        * TestExpectations: Mark test as newly passing.
        * css3/scroll-snap/scroll-snap-right-to-left-initial-snapping-expected.txt: Added.
        * css3/scroll-snap/scroll-snap-right-to-left-initial-snapping.html: Added.

2021-06-15  Enrique Ocaña González  <eocanha@igalia.com>

        [GStreamer] media/video-seek-after-end.html is no longer flakey
        https://bugs.webkit.org/show_bug.cgi?id=203079
        <rdar://problem/56366173>

        Reviewed by Philippe Normand.

        Increased test timeout to something higher than 1300ms to prevent the test failure.

        * media/video-seek-after-end.html: Increased timeout.
        * platform/glib/TestExpectations: Unskipped the test.

2021-06-15  Martin Robinson  <mrobinson@webkit.org>

        [css-scroll-snap] New snap containers always snap to the first scroll position
        https://bugs.webkit.org/show_bug.cgi?id=226630

        Reviewed by Simon Fraser.

        * TestExpectations: Mark two WPT tests as passing.

2021-06-14  Youenn Fablet  <youenn@apple.com>
