@@ -1,3 +1,14 @@
+2021-06-15  Youenn Fablet  <youenn@apple.com>
+
+        (r278359) fast/mediastream/mediaElement-gc.html is a flaky failure
+        https://bugs.webkit.org/show_bug.cgi?id=226991
+        <rdar://problem/79309901>
+
+        Reviewed by Eric Carlson.
+
+        * fast/mediastream/mediaElement-gc.html:
+        Call GC several times if needed to collect the media element.
+
 2021-06-15  Arcady Goldmints-Orlov  <agoldmints@igalia.com>
 
         [GTK] Unreviewed test gardening: add expected failure
